--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "nika",
+  "author": "Nika Qanashvili",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pg": "^8.14.1",
-    "slugify": "^1.6.6"
+    "express-rate-limit": "^7.5.0",
+    "mongoose": "^8.12.0",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "pg": "^8.14.1"
   }
 }
