--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "mongoose": "^8.12.0",
     "morgan": "^1.10.0",
+    "pg": "^8.14.1",
+    "prisma": "^6.5.0",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "pg": "^8.14.1"
+    "swagger-ui-express": "^5.0.1"
   }
 }
