--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "^6.5.0",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   }
 }
